# Ratatui-Rust-Example

./: Cargo.toml  Cargo.toml.backup  README.md  complete_test_guide.ps1  debug_form.ps1  demo.ps1  demo.sh  demo_cli.ps1  final_debug_guide.ps1  interactive_form_guide.ps1  keyboard_diagnosis.ps1  quick_test.ps1  ratatui_config.toml  test_cli.ps1  test_components.ps1  test_examples.sh
.github/workflows/: ci.yml
campaigns/journal_campaign_ddd_at_js_dd_20250801_095906/: README.md  campaign.json
campaigns/journal_campaign_ddd_at_js_dd_20250801_095906/templates/: welcome_email.html
campaigns/journal_campaign_q/: README.md  campaign.json  welcome_email.html
campaigns/journal_campaign_shri_at_gev_f_20250801_094628/: README.md  campaign.json
campaigns/journal_campaign_shri_at_gev_f_20250801_094628/templates/: welcome_email.html
campaigns/journal_campaign_shri_at_gmail_com_20250801_094921/: README.md  campaign.json
campaigns/journal_campaign_shri_at_gmail_com_20250801_094921/templates/: welcome_email.html
campaigns/journal_campaign_ssomething/: README.md  campaign.json  welcome_email.html
campaigns/journal_campaign_test/: README.md  campaign.json  welcome_email.html
examples/: dashboard.rs  emoji_picker.rs  hyperlinks.rs  image_viewer.rs  read.md  table_example.rs  text_input.rs  video_player.rs
logs/: api_call_1754041579.json  api_call_1754041757.json  api_call_1754042341.json
src/: lib.rs  main.rs
src/app/: config.rs  mod.rs
src/examples/: animation_ascii.rs  ascii_art.rs  charts_demo.rs  dashboard.rs  hyperlinks.rs  image_viewer.rs  interactive_form.rs  interactive_table.rs  main_menu.rs  mod.rs  table_example.rs  text_input.rs  video_player.rs
src/ui/: mod.rs
src/widgets/: clipboard.rs  image.rs  input.rs  mod.rs  table.rs
tests/: config_tests.rs  integration_test.rs
