[package]
name = "tui-image-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = { version = "6.1.1", optional = true }
crossterm = "0.28"
image = "0.24"

# If you were using viuer or others, leave them as-is:
viuer = "0.6.2"
toml = "0.8.23"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
arboard = "3.4"
once_cell = "1.19"
log = "0.4"
open = "5"

[lib]
name = "tui_image_viewer"
path = "src/lib.rs"

[features]
# No default features
default = []
# When you enable "video", it pulls in ffmpeg-next (and builds FFmpeg 6.x)
video = ["ffmpeg-next"]
