[package]
name = "tui-image-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = { version = "6.1.1", optional = true }
crossterm = "0.28"
ratatui = "0.28"
image = { version = "0.25", features = [
    "jpeg", "png", "gif", "bmp", "tiff", "webp", "ico", "pnm", "dds", "hdr", "exr", "qoi", "avif"
] }
viuer = "0.7"
toml = "0.8.23"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
arboard = "3.4"
once_cell = "1.19"
log = "0.4"
open = "5"
regex = "1.11.1"

[lib]
name = "tui_image_viewer"
path = "src/lib.rs"

[features]
default = []
video = ["ffmpeg-next"]
