[package]
name = "tui-image-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui-image-viewer"
path = "src/main.rs"

[[bin]]
name = "interactive_form"
path = "src/bin/interactive_form.rs"

[[bin]]
name = "animation_ascii"
path = "src/examples/animation_ascii.rs"

[[bin]]
name = "ascii_art"
path = "src/examples/ascii_art.rs"

[[bin]]
name = "dashboard"
path = "src/examples/dashboard.rs"

[[bin]]
name = "emoji_picker"
path = "src/examples/emoji_picker.rs"

[[bin]]
name = "hyperlinks"
path = "src/examples/hyperlinks.rs"

[[bin]]
name = "image_viewer"
path = "src/examples/image_viewer.rs"

[[bin]]
name = "table_example"
path = "src/examples/table_example.rs"

[[bin]]
name = "text_input"
path = "src/examples/text_input.rs"

[[bin]]
name = "video_player"
path = "src/examples/video_player.rs"

[[bin]]
name = "interactive_table"
path = "src/examples/interactive_table.rs"

[[bin]]
name = "charts_demo"
path = "src/examples/charts_demo.rs"

[[bin]]
name = "main_menu"
path = "src/examples/main_menu.rs"

[[bin]]
name = "journal_cli"
path = "src/bin/journal_cli.rs"

[[bin]]
name = "journal_cli_enhanced"
path = "src/bin/journal_cli_enhanced.rs"

[[bin]]
name = "simple_form_test"
path = "src/bin/simple_form_test.rs"

[[bin]]
name = "keyboard_test"
path = "src/bin/keyboard_test.rs"

[[bin]]
name = "no_filter_test"
path = "src/bin/no_filter_test.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
image = "0.24"
viuer = { version = "0.7", default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
regex = "1.0"
url = "2.0"
webbrowser = "1.0"
clipboard = "0.5"
ffmpeg-next = { version = "7.0", optional = true }
once_cell = "1.19"
arboard = "3.4"
log = "0.4"
toml = "0.8"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
video = ["ffmpeg-next"]
